Fix bug with content overflow

--- a/src/pages/UserPageLayout/UserPageLayout.css
+++ b/src/pages/UserPageLayout/UserPageLayout.css
@@ -11,7 +11,7 @@
 }
 
 .userPageContainer {
-    height: 100dvh;
+    min-height: 100dvh;
     padding: 1rem;
     display: grid;
     column-gap: 2rem;
